@@ -28,9 +28,10 @@ import org.junit.jupiter.params.provider.ArgumentsSource;
  * the annotation has to be on the method itself as any other {@link ArgumentsSource}.
  * </p>
  *
- * <p>
- * For more details and examples, see
- * <a href="https://junit-pioneer.org/docs/json/" target="_top">the documentation on <code>JSON tests</code></a>
+ * <p>Note that this extension requires a JSON parser to be available at run time,
+ * which may include adding it to the module graph with {@code --add-modules}.
+ * For details on that as well as how to use this extension, see
+ * <a href="https://junit-pioneer.org/docs/json-argument-source" target="_top">the documentation on <code>JSON tests</code></a>
  * </p>
  *
  * @since 1.7.0
